--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,8 @@ body{
 #slider-section{
 	width:100%;
 	height:400px;
-	background-color:#607d8b;
+	background:url("../images/1.jpg");
+	/*background-color:#607d8b;*/
 	background-size:auto  400px;
 	background-repeat: repeat-x;
 	overflow:hidden;
