--- a/css/style.css
+++ b/css/style.css
@@ -94,7 +94,7 @@ body{
 	float:left;
 }
 .right{
-	float :right;
+	float:right;
 }
 .btn-orange{
 	background-color:transparent;
@@ -112,6 +112,23 @@ body{
 	box-shadow: inset 100px 0 0 50px #ff3d00;  
 	color:#fff;
 }
+.btn-green{
+	background-color:transparent;
+	border-color:#4CAF50;
+	font-weight:500;
+	font-size:100%;
+	box-shadow:inset 0 0 0 0 #ccc;
+	transition: all ease 0.9s;
+	color:#4CAF50;
+	text-align: center;
+	text-transform: capitalize;
+}
+.btn-green:hover{
+	box-shadow: inset 0 100px 100px 0 #4CAF50; 
+	color:#fff;
+}
+
+
 .footer{
 	background-color:#000;
 	width:100%;
@@ -139,4 +156,38 @@ body{
 }
 .btn-full{
 	width:100%;
+}
+.section{
+	width:auto;
+	height:auto;
+	padding:20px;
+}
+.card{
+	padding:20px;
+	height:inherit;
+	background-color:#fff;
+	color:#444;
+	box-shadow: 2px 2px 10px #bbb;
+
+}
+.card-lg{
+	width:90%;
+	margin:10px auto;
+	
+
+}
+.card-left-border{
+	border-left:2px solid ;
+}
+.border-red{
+	border-color:#F44336;
+
+}
+.card-topBottom-border{
+	border-top:2px solid ;
+	border-bottom: 2px solid;
+}
+.border-blue{
+	border-color:#2196F3;
+
 }
