--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,11 @@
 body{
 	fon-family:"open sans";
 }
+p{
+	font-size:100%!important;
+	font-weight: 500;
+	text-transform: capitalize;
+}
 .main{
 	width:100%;
 	z-index:1;
@@ -310,13 +315,23 @@ body{
 	margin:100px auto;
 	box-shadow:3px 3px 15px #444;
 	border-radius:4px ;
+	border:solid 1px #ccc;
+}
+.register-box{ 
+	width:40%;
+	height:auto;
+	padding:15px;
+	margin:100px auto;
+	box-shadow:3px 3px 15px #444;
+	border:solid 1px #ccc;
+	
 }
 .facebook-login{
 	background-color:transparent;
 	color:#1976D2;
 	width:100%;
 	border:solid 1px #1976D2;
-	font-size:100%!important;
+	font-size:12px;
 	box-shadow:inset 0 0 0 0 #ccc;
 	transition: all ease 0.9s;
 }
@@ -325,7 +340,7 @@ body{
 	color:#F44336;
 	width:100%;
 	border:solid 1px #F44336;
-	font-size:100%!important;
+	font-size:12px;
 	box-shadow:inset 0 0 0 0 #ccc;
 	transition: all ease 0.9s;
 
@@ -337,4 +352,11 @@ body{
 .google-login:hover{
 	box-shadow: inset 0 100px 100px 0 #F44336; 
 	color:#fff;
+}
+.checkbox{
+	width:20px;
+	height:20px;
+	border:solid 1px #444;
+	border-radius:0;
+
 }
